whatsapp.js: show chrome notification when requested by webview

--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,8 @@
     "audioCapture",
     "notifications",
     "videoCapture",
-    "webview"
+    "webview",
+    "*://*.whatsapp.com/*",
+    "*://whatsapp.com/*"
   ]
 }
