Update version to 0.9.5

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "default_locale": "en",
   "author": "Marco Trevisan",
   "minimum_chrome_version": "36.0",
-  "version": "0.9.4",
+  "version": "0.9.5",
   "icons": {
     "16": "icon_16.png",
     "128": "icon_128.png",
@@ -22,8 +22,6 @@
     "audioCapture",
     "notifications",
     "videoCapture",
-    "webview",
-    "*://*.whatsapp.com/*",
-    "*://whatsapp.com/*"
+    "webview"
   ]
 }
